--- a/src/components/InfoToolTip/InfoToolTip.scss
+++ b/src/components/InfoToolTip/InfoToolTip.scss
@@ -1,47 +1,48 @@
 @use "../../scss/base";
 
 .infotooltip {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: fixed;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    background: rgba(0, 0, 0, 0.5);
-    z-index: 100;
-    visibility: hidden;
-    opacity: 0;
-    transition: visibility 0.5s, opacity 0.5s linear;
-  }
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 100;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0.5s, opacity 0.5s linear;
+}
 
-  
-  .infotooltip__container {
-    width: 430px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    position: fixed;
-    background: #ffffff;
-    box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
-    border-radius: 10px;
-  }
-  
-  .infotooltip__text {
-    @include base.fontstyle($weight: bold, $size: 18px, $fontcolor: #000000);
-    margin-block-start: 0;
-    margin-block-end: 0;
-    margin: 0 36px 60px;
-    text-align: center;
-  }
+.infotooltip__container {
+  width: 430px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  position: fixed;
+  background: #ffffff;
+  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
+  border-radius: 10px;
+  padding-bottom: 20px;
+}
 
-  .infotooltip_opened {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    visibility: visible;
-    opacity: 1;
-  }
-  
+.infotooltip_opened {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  visibility: visible;
+  opacity: 1;
+}
+
+.infotooltip__field-container {
+  width: 400px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.infotooltip__field-name {
+  @include base.fontstyle($weight: normal, $size: 18px);
+}
