--- a/src/index.scss
+++ b/src/index.scss
@@ -6,3 +6,4 @@
 @import url('./components/EditProductForm/EditProductForm.scss');
 @import url('./components/CreateProductForm/CreateProductForm.scss');
 @import url('./components/ProductType/ProductType.scss');
+@import url('./components/InfoToolTip/InfoToolTip.scss');
