--- a/src/index.scss
+++ b/src/index.scss
@@ -7,3 +7,4 @@
 @import url('./components/CreateProductForm/CreateProductForm.scss');
 @import url('./components/ProductType/ProductType.scss');
 @import url('./components/InfoToolTip/InfoToolTip.scss');
+@import url('./components/DeleteToolTip/DeleteToolTip.scss');
