fix/tooltips style

--- a/src/components/DeleteToolTip/DeleteToolTip.scss
+++ b/src/components/DeleteToolTip/DeleteToolTip.scss
@@ -17,7 +17,8 @@
 }
 
 .deletetooltip__container {
-  width: 430px;
+  width: 520px;
+  height: 180px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
