--- a/src/components/InfoToolTip/InfoToolTip.scss
+++ b/src/components/InfoToolTip/InfoToolTip.scss
@@ -17,7 +17,7 @@
 }
 
 .infotooltip__container {
-  width: 430px;
+  width: 520px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -26,7 +26,7 @@
   background: #ffffff;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
   border-radius: 10px;
-  padding-bottom: 20px;
+  padding: 0 20px 20px 20px;
 }
 
 .infotooltip_opened {
@@ -38,11 +38,17 @@
 }
 
 .infotooltip__field-container {
-  width: 400px;
+  width: 500px;
   display: flex;
   justify-content: space-between;
 }
 
 .infotooltip__field-name {
+  width: 240px;
   @include base.fontstyle($weight: normal, $size: 18px);
+  text-align: start;
+}
+
+.infotooltip__field-name_description {
+  @include base.fontstyle($weight: normal, $size: 14px);
 }
